Added backend karate tests